update migration route and docs
