# payment/docs/swagger.json
@@ -9,6 +9,40 @@
     "host": "localhost:9091",
     "basePath": "/api",
     "paths": {
+        "/transaction-migrate": {
+            "post": {
+                "description": "migrate transaction schema and the related tables",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "migration"
+                ],
+                "summary": "migrate transaction schema",
+                "parameters": [
+                    {
+                        "description": "key",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_database.MigrationKey"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/internal_database.DefaultResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/transaction/send": {
             "post": {
                 "security": [
@@ -84,6 +118,23 @@
         }
     },
     "definitions": {
+        "internal_database.DefaultResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_database.MigrationKey": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "type": "string",
+                    "example": "helloworld123"
+                }
+            }
+        },
         "model.SendResponse": {
             "type": "object",
             "properties": {
